--- a/lib/generators/sufia/templates/config/shoryuken.yml
+++ b/lib/generators/sufia/templates/config/shoryuken.yml
@@ -1,16 +1,21 @@
 aws:
-  access_key_id:      <%= ENV['AWS_ACCESS_KEY_ID'] || 'foobar' %>
-  secret_access_key:  <%= ENV['AWS_SECRET_ACCESS_KEY'] || 'gobbledygook' %>
-  region:             <%= ENV['AWS_REGION'] || 'us-east-1' %>
+# access_key_id:      <%= ENV['AWS_ACCESS_KEY_ID'] || 'foobar' %>
+# secret_access_key:  <%= ENV['AWS_SECRET_ACCESS_KEY'] || 'gobbledygook' %>
+# region:             <%= ENV['AWS_REGION'] || 'us-east-1' %>
   receive_message:              # See http://docs.aws.amazon.com/sdkforruby/api/Aws/SQS/Client.html#receive_message-instance_method
     # wait_time_seconds: N      # The number of seconds to wait for new messages when polling. Defaults to the #wait_time_seconds defined on the queue
     attribute_names:
       - ApproximateReceiveCount
       - SentTimestamp
-concurrency: 5     # The number of allocated threads to process messages. Default 25
 # delay: 25        # The delay in seconds to pause a queue when it's empty. Default 0
 queues:
-  - [high_priority, 6]
-  - [default, 2]
-  - [atztest, 1]
-  - [low_priority, 1]
+<%-
+  priority_sum = 0
+  @queues ||= [['default', (@threads || 25)]] # shoryuken's default concurrency is 25
+  @queues.each do | name, priority |
+    priority ||= 1
+    priority_sum += priority
+-%>
+  - [ <%= name %>, <%= priority %> ]
+<%- end -%>
+concurrency: <%= @threads || priority_sum %> # The number of allocated threads to process messages. Default: sum of priorites.
